<resources>
    <string name="app_name">RecommendationSystem</string>
    <string name="title_home">主页</string>
    <string name="title_my">我的</string>
    <string name="title_shop_car">购物车</string>
    <string name="title_goods">商品</string>

    <!--主页-->
        <!--主页目录下顶部导航栏文字描述 2020.01.13 -->
        <string name="clothes">服装</string>
        <string name="cosmetics">护肤</string>
        <string name="digital">数码</string>
        <string name="dry">干货</string>
        <string name="food">食物</string>
        <string name="fresh">生鲜</string>
        <string name="fruit">水果</string>
        <string name="pet">宠物</string>
        <!--+++++++++++++++++++++++++++++++++++-->

        <!--主页猜您喜欢 2020.01.13-->
            <!--标题栏文字描述-->
            <string name="home_guess_you_like">猜您喜欢</string>
            <!--++++++++++++-->
            <!--滑动卡片项-->
            <string name="home_card_item_title_def">暂时还没想好商品名</string>
            <string name="home_card_item_price_def">¥0.00</string>
            <string name="home_card_item_comment_def">0</string>
            <!--++++++++-->
        <!--+++++++++++++++++++++-->

    <!--+++-->
    
    <string name="char_set_letter_digital_punctuation">&#038;&#060;=&#062;!"#$%'()*+,-./:;?@[\]^_`{|}~abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>

</resources>
