<?xml version="1.0" encoding="utf-8"?>
<!--主页页面 2020-01-13-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBottomGray">
    <!--顶部向导栏-->
    <GridLayout
        android:id="@+id/home_title_bar"
        android:paddingTop="5dp"
        android:rowCount="2"
        android:columnCount="4"
        android:background="@drawable/shape_round_corner_white"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp5"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="5dp"
        android:paddingVertical="20dp"
        android:layout_above="@id/home_guess_you_like"
        android:translationZ="10dp"
        android:layout_height="match_parent">
        <!--服装专区-->
        <RelativeLayout
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_column="0"
        android:id="@+id/home_guide_bar_clothes">
            <ImageView
                android:id="@+id/home_guide_bar_clothes_image"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/home_guide_bar_image_width"
                android:layout_height="@dimen/home_guide_bar_image_height"
                android:src="@mipmap/icon_clothes"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/clothes"
                android:layout_below="@id/home_guide_bar_clothes_image"/>
        </RelativeLayout>
        <!--宠物专区-->
        <RelativeLayout
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/home_guide_bar_pet">
                <ImageView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/home_guide_bar_pet_image"
                    android:layout_width="@dimen/home_guide_bar_image_width"
                    android:layout_height="@dimen/home_guide_bar_image_height"
                    android:src="@mipmap/icon_pet"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/pet"
                    android:layout_below="@id/home_guide_bar_pet_image"/>
        </RelativeLayout>

        <!--生鲜专区-->
        <RelativeLayout
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="2"
            android:id="@+id/home_guide_bar_fresh">
                <ImageView
                    android:id="@+id/home_guide_bar_fresh_image"
                    android:layout_width="@dimen/home_guide_bar_image_width"
                    android:layout_height="@dimen/home_guide_bar_image_height"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/icon_fresh"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/fresh"
                    android:layout_below="@id/home_guide_bar_fresh_image"/>
        </RelativeLayout>

        <!--护肤专区-->
        <RelativeLayout
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="3"
            android:id="@+id/home_guide_bar_cosmetics">
                <ImageView
                    android:id="@+id/home_guide_bar_cosmetics_image"
                    android:layout_width="@dimen/home_guide_bar_image_width"
                    android:layout_height="@dimen/home_guide_bar_image_height"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/icon_cosmetics"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/cosmetics"
                    android:layout_below="@id/home_guide_bar_cosmetics_image"/>
        </RelativeLayout>

        <!--食物专区-->
        <RelativeLayout
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:id="@+id/home_guide_bar_food">
                <ImageView
                    android:id="@+id/home_guide_bar_food_image"
                    android:layout_width="@dimen/home_guide_bar_image_width"
                    android:layout_height="@dimen/home_guide_bar_image_height"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/icon_food"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/food"
                    android:layout_below="@id/home_guide_bar_food_image"/>
        </RelativeLayout>

        <!--数码选项-->
        <RelativeLayout
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_column="1"
            android:id="@+id/home_guide_bar_digital">
                <ImageView
                    android:id="@+id/home_guide_bar_digital_image"
                    android:layout_width="@dimen/home_guide_bar_image_width"
                    android:layout_height="@dimen/home_guide_bar_image_height"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/icon_digital"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/digital"
                    android:layout_below="@id/home_guide_bar_digital_image"/>
        </RelativeLayout>

        <!--干货专区-->
        <RelativeLayout
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_column="2"
            android:id="@+id/home_guide_bar_dry">
                <ImageView
                    android:id="@+id/home_guide_bar_dry_image"
                    android:layout_width="@dimen/home_guide_bar_image_width"
                    android:layout_height="@dimen/home_guide_bar_image_height"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/icon_dry"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/dry"
                    android:layout_below="@id/home_guide_bar_dry_image"/>
        </RelativeLayout>

        <!--水果专区-->
        <RelativeLayout
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_column="3"
            android:id="@+id/home_guide_bar_fruit">
                <ImageView
                    android:id="@+id/home_guide_bar_fruit_image"
                    android:layout_width="@dimen/home_guide_bar_image_width"
                    android:layout_height="@dimen/home_guide_bar_image_height"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/icon_fruit"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/fruit"
                    android:layout_below="@id/home_guide_bar_fruit_image"/>
        </RelativeLayout>

    </GridLayout>

    <!--猜您喜欢项-->
    <LinearLayout
        android:id="@+id/home_guess_you_like"
        android:background="@drawable/shape_round_corner_white"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="80dp"
        android:layout_marginHorizontal="5dp"
        android:translationZ="10dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:background="@mipmap/icon_target" >
            <!--标题-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:text="@string/home_guess_you_like"
                android:textColor="#000000" />
        </RelativeLayout>

        <!--商品浏览画廊-->
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_home"
            android:layout_alignParentBottom="true">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <ImageView
        android:translationZ="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/home_title_bar"
        android:layout_alignParentEnd="true"
        android:background="@mipmap/icon_refresh"
        android:id="@+id/id_refresh"
        android:layout_width="25dp"
        android:layout_height="25dp" />
</RelativeLayout>