<?xml version="1.0" encoding="utf-8"?>
<!--主页下猜您喜欢项的每个卡片 2020-01-13 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="280dp"
    android:translationZ="10dp"
    android:background="@drawable/shape_round_corner_white">
    <!--商品图片-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/home_card_image"
        android:layout_marginHorizontal="@dimen/dp5"
        android:layout_marginTop="10dp"
        android:background="@mipmap/icon_image_null"/>
    <!--显示商品的标题名称-->
    <TextView
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_card_item_title_def"
        android:id="@+id/home_card_title"
        android:layout_below="@id/home_card_image"/>
    <!--显示商品价格-->
    <LinearLayout
        android:layout_marginBottom="@dimen/dp5"
        android:layout_below="@id/home_card_title"
        android:id="@+id/home_card_star"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="20dp">
        <ImageView
            android:layout_weight="1"
            android:id="@+id/home_card_star_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/icon_star_null"/>
        <ImageView
            android:layout_weight="1"
            android:id="@+id/home_card_star_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/icon_star_null"/>
        <ImageView
            android:layout_weight="1"
            android:id="@+id/home_card_star_3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/icon_star_null"/>
        <ImageView
            android:layout_weight="1"
            android:id="@+id/home_card_star_4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/icon_star_null"/>
        <ImageView
            android:layout_weight="1"
            android:id="@+id/home_card_star_5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/icon_star_null"/>

    </LinearLayout>
    <ImageView
        android:layout_below="@id/home_card_star"
        android:id="@+id/home_card_comment_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@mipmap/icon_comment"/>
    <TextView
        android:id="@+id/home_card_comment_number"
        android:layout_width="wrap_content"
        android:layout_below="@id/home_card_star"
        android:layout_toEndOf="@id/home_card_comment_icon"
        android:text="@string/home_card_item_comment_def"
        android:layout_marginStart="4dp"
        android:textColor="@color/comment_purple"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginEnd="4dp"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_card_item_price_def"
        android:textColor="@color/colorPrice"
        android:id="@+id/home_card_price"
        android:layout_below="@id/home_card_star"/>
</RelativeLayout>